docs/versioned_docs/version-1.19/howto/troubleshooting.md
# Troubleshooting

This section provides guidance on diagnosing and resolving issues in your Contrast deployment.

## Related topics

- [Logging](./logging.md): How to capture useful logs from your Contrast deployment.

## `contrast generate` returns errors

Some workload configurations are known to be insecure or incompatible with Contrast.
If such a configuration is detected during policy generation, an error is logged and the command fails.

### Images with VOLUME declarations but without a Kubernetes mount

During `contrast generate`, an error like the following is printed and the process returns with a non-zero exit code:

```
level=ERROR msg="The following volumes declared in image config don't have corresponding Kubernetes mounts: [\"/data\"]"
```

This error indicates that the container image declares a [`VOLUME`], but there is no Kubernetes volume mounted at that path (`/data` in the example).
Since it's not clearly specified if or what a container runtime is supposed to mount in that case, all declared volumes need to have a corresponding explicit Kubernetes volume mount.
Depending on the needs of the application, this could either be an [`emptyDir`] or a [Contrast-managed persistent volume].

[`VOLUME`]: https://github.com/opencontainers/image-spec/blob/06e6b47e2ef69021d9f9bf2cfa5fe43a7e010c81/config.md?plain=1#L168-L170
[`emptyDir`]: https://kubernetes.io/docs/concepts/storage/volumes/#emptydir
[Contrast-managed persistent volume]: ../architecture/secrets.md#secure-persistence

## Pod fails to start

If the Coordinator or a workload pod fails to even start, it can be helpful to
look at the events of the pod during the startup process using the `describe`
command.

```sh
kubectl -n <namespace> events --for pod/<coordinator-pod-name>
```

Example output:

```
LAST SEEN  TYPE     REASON  OBJECT             MESSAGE
32m        Warning  Failed  Pod/coordinator-0  kubelet  Error: failed to create containerd task: failed to create shim task: "CreateContainerRequest is blocked by policy: ...
```

A common error, as in this example, is that the container creation was blocked by the
policy. Potential reasons are a modification of the deployment YAML without updating
the policies afterward, or a version mismatch between Contrast components.

### Regenerating the policies

To ensure there isn't a mismatch between Kubernetes resource YAML and the annotated
policies, rerun

```sh
contrast generate
```

on your deployment. If any of the Contrast annotations change, re-deploy to apply the updated policies.

### Validate Contrast components match

A version mismatch between Contrast components can cause policy validation or attestation
to fail. Each Contrast runtime is identifiable based on its (shortened) measurement value
used to name the runtime class version.

First, analyze which runtime class is currently installed in your cluster by running

```sh
kubectl get runtimeclasses
```

This should give you output similar to the following one.

```
NAME                                           HANDLER                                        AGE
contrast-cc-metal-qemu-snp-7173acb5               contrast-cc-metal-qemu-snp-7173acb5               23h
```

The output shows that there is a Contrast runtime class installed.
If this command doesn't print any Contrast runtime class, you might have skipped the [runtime deployment](workload-deployment/runtime-deployment.md) step.

Next, check if the pod that won't start has the correct runtime class configured, and the
Coordinator uses the exact same runtime:

```sh
kubectl -n <namespace> get -o=jsonpath='{.spec.runtimeClassName}' pod/<pod-name>
kubectl -n <namespace> get -o=jsonpath='{.spec.runtimeClassName}' pod/<coordinator-pod-name>
```

The output should list the runtime class the pod is using:

```sh
contrast-cc-metal-qemu-snp-7173acb5
```

Version information about the currently used CLI can be obtained via the `version` flag:

```sh
contrast --version
```

```sh
contrast version v1.XX.X

container image versions:
    ghcr.io/edgelesssys/contrast/coordinator:v1.19.0@sha256:a0b34bce876b03cfa943dcc838ab8f9a46cc3f76e3e2b709d93036bbe665ccba@sha256:...
    ghcr.io/edgelesssys/contrast/initializer:v1.19.0@sha256:68029332590daf698f24e03074fab71064147fc74ad09959faf1ae0d68013066@sha256:...
    ghcr.io/edgelesssys/contrast/service-mesh-proxy:v1.19.0@sha256:87ae7f0aa2f5bae51513e028a8228f3aeb2517db636641526e145d09b99672e4@sha256:...
    ghcr.io/edgelesssys/contrast/node-installer-kata:v1.19.0@sha256:3ab565ef8d65050cbdd0e341447110ffe155d130e49dc1edc014a28f902fb96b@sha256:...
    ghcr.io/edgelesssys/contrast/node-installer-kata-gpu:v1.19.0@sha256:4d758374b7d03b54b875ac84b892e49d622e5518bdc1c8029f4fbab6b7c7de90@sha256:...

reference values for Metal-QEMU-SNP platform:
    runtime handler:      contrast-cc-metal-qemu-snp-7173acb5
    - launch digest:      6cf7f93545210549c25e4efde6878deabfb5357da1a50b0fc9126e1218d182402a5ba2400d708a3d054ba96d663a2918
      default SNP TCB:
          bootloader:     3
          tee:            0
          snp:            8
          microcode:      115
    genpolicy version:    3.15.0

reference values for Metal-QEMU-TDX platform:
...
```

Check the output for the section with the platform you are using, for example `Metal-QEMU-SNP`.
The `runtime handler` must match the runtime class name of the pod that won't start.

### Failing node installer

If the `nodeinstaller` fails during node setup, it won't become ready and show a pod status like this:

```
NAME                                                      READY   STATUS       RESTARTS     AGE
contrast-cc-metal-qemu-snp-7173acb5-nodeinstaller-zs6wc   0/1     Init:Error   1 (5s ago)   8s
```

In general, this means that the Contrast runtime isn't ready for workloads.
If you run pods in this situation, they could fail with a number of error messages.
For example, when the containerd config wasn't patched correctly or containerd wasn't restarted by the node installer:

```
  Type     Reason                  Age   From               Message
  ----     ------                  ----  ----               -------
  Warning  FailedCreatePodSandBox  17s   kubelet            Failed to create pod sandbox: rpc error: code = Unknown desc = unable to get OCI runtime for sandbox "6755f75b925298885ae0d0b5136f06e6b53cbc517697d6f59455106ea3155ed1": no runtime for "contrast-cc-metal-qemu-snp-7173acb5" is configured
```

Review the node installer pod logs to learn about the failure, and consult the [node installer configuration reference](../reference/node-installer-configuration.md) if you need to adjust the settings for your environment.

### Contrast attempts to pull the wrong image reference

Containerd versions before `v2.0.0` have a bug that can lead to pulling image references that differ from the PodSpec.
The policy failure contains a line starting with `allow_create_container_input` at the very top.
This is the request received from the runtime and subject to policy enforcement.
The JSON contains a list of annotations nested under `.OCI.Annotations`.
Verify that the value for annotation key `io.kubernetes.cri.image-name` corresponds to an image in your PodSpec.
If it doesn't, you need to remove that image entirely from the affected node, for example with `crictl`.

```sh
crictl rmi $IMAGE
```

Unfortunately, this bug won't be fixed for containerd versions before `v2.0.0`.

## VM runs out of memory

Since pod VMs are statically sized, it's easier to run out of memory due to misconfigurations.
Setting the right memory limits is even more important on bare metal, especially in the case that the [secure image store is disabled](./secure-image-store.md), meaning the image layers need to be stored in guest memory, too.
If you see an error message like this, the VM doesn't have enough space to pull images:

```
LAST SEEN   TYPE      REASON      OBJECT                            MESSAGE
2m31s       Warning   Failed      Pod/my-pod-76dc84fc75-6xn7s   Error: failed to create containerd task: failed to create shim task: failed to handle layer: hasher sha256: failed to unpack [...] No space left on device (os error 28)
```

This error can be resolved by increasing the memory limit of the containers, see the [Workload deployment](../howto/workload-deployment/deployment-file-preparation.md#pod-resources) guide.
If you aren't using the [Contrast secure image store](./secure-image-store.md), consider enabling it to pull images onto an encrypted disk instead of into memory, reducing overall memory requirements.

## Connection to Coordinator fails

Connections from the CLI to the Coordinator may fail due to a variety of reasons.
If the error happens during the attested TLS handshake, it will usually be reported as an error message of the following form:
`rpc error: code = <GRPC ERROR CODE> desc = connection error: desc = "<DESCRIPTION>"`.
The following table explains the reason for the error and suggests further debugging steps.

| Description  | Cause | Next steps |
| ------------ | ----- | ---------- |
| `transport: authentication handshake failed: EOF` | Connection was closed before the Coordinator could send a certificate. | Check the load balancer. |
| `received context error while waiting for new LB policy update: context deadline exceeded` | The Coordinator didn't send attestation documents before the deadline. | Check the Coordinator logs for issuer problems. |
| `transport: authentication handshake failed: remote error: tls: internal error` | Coordinator failed to issue attestation documents | Check the Coordinator logs for issuer problems. |
| `transport: authentication handshake failed: no valid attestation document certificate extensions found` | Coordinator served an unexpected certificate. | Check whether remote end is the Coordinator with port 1313; Compare versions of Coordinator and CLI. |
| `transport: authentication handshake failed: tls: first record does not look like a TLS handshake` | Coordinator didn't serve TLS. | Check whether remote end is the Coordinator with port 1313. |
| `transport: Error while dialing: dial tcp <host:port>: connect: connection refused` | Coordinator port is closed. | Check connectivity to the Coordinator; Check coordinator readiness; Check load balancer is pointing to the Coordinator port 1313. |
| `transport: authentication handshake failed: [...] validator tdx-0 failed: validating report data: quote field MR_CONFIG_ID is [...]. Expect [...]"` | Wrong Coordinator initdata hash. | Make sure that you ran `contrast generate`, applied the Coordinator resource and restarted the Coordinator pods. |
